@@ -297,6 +297,10 @@ namespace WebCore {
         DECLARE_CALLBACK(HTMLCollectionNamedItem);
         DECLARE_CALLBACK(HTMLCollectionCallAsFunction);
 
+        DECLARE_CALLBACK(HTMLAllCollectionItem);
+        DECLARE_CALLBACK(HTMLAllCollectionNamedItem);
+        DECLARE_CALLBACK(HTMLAllCollectionCallAsFunction);
+
         DECLARE_CALLBACK(HTMLSelectElementRemove);
 
         DECLARE_CALLBACK(HTMLOptionsCollectionRemove);
@@ -521,6 +525,7 @@ namespace WebCore {
         DECLARE_INDEXED_PROPERTY_SETTER(HTMLOptionsCollection);
         DECLARE_NAMED_PROPERTY_GETTER(HTMLSelectElementCollection);
         DECLARE_INDEXED_PROPERTY_SETTER(HTMLSelectElementCollection);
+        DECLARE_NAMED_PROPERTY_GETTER(HTMLAllCollection);
         DECLARE_NAMED_PROPERTY_GETTER(HTMLCollection);
 
 #if ENABLE(3D_CANVAS)
